--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,15 @@ dependencies = [
     "sympy",
 ]
 
+[build-system]
+requires = [
+    "setuptools>=45",
+    "wheel",
+    "setuptools_scm[toml]>=6.2",
+]
+
+build-backend = "setuptools.build_meta"
+
 [tool.ruff]
 line-length = 88
 indent-width = 4
